service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-app-service
spec:
  type: ClusterIP
  selector:
    app: http-app
  ports:
    - port: 8080
      name: http-exposed
      targetPort: http
      protocol: TCP
